<resources>
    <string name="app_name">TrocaEsteJogo</string>
    <string name="title_activity_jogos">Jogos</string>
    <string name="jogos">Jogos</string>
    <string name="jogo">Jogo</string>

    <!--cadastro-->
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="registrar">Registrar</string>
    <string name="cancelar">Cancelar</string>

    <!--Perfil-->
    <string name="trocar_jogos">Trocar Jogos</string>

    <!--resetar_senha-->
    <string name="resetar_senha">Trocar senha</string>

    <!--Trocas-->
    <string name="Aceitar">Aceitar</string>
    <string name="Recusar">Recusar</string>
    <string name="acabouGente"> Opa! Acabaram os jogos por hora! </string>

    <!--Novo jogo-->
    <string name="Preco">Preço</string>
    <string name="Usado">Usado</string>
    <string name="adicionar">Adicionar</string>


    <!--Login-->
    <string name="n_tem_conta">Não tem conta?</string>
    <string name="esqueceu_senha">Esqueceu sua senha?</string>



</resources>
