<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Trocas">

    <LinearLayout
        android:id="@+id/TrocasLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center_vertical|center"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome" />

        <TextView
            android:id="@+id/lblTrocasNomeUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Name"
            android:textColor="?attr/actionModeSplitBackground"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jogo" />

        <TextView
            android:id="@+id/lblTrocasNomeJogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="Nome do Jogo"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_weight="0"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="0dp">

            <Button
                android:id="@+id/btnRecusar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="50dp"
                android:background="@android:color/holo_red_dark"
                android:text="@string/Recusar"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/btnAceitar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/holo_green_dark"
                android:text="@string/Aceitar"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/lblNinguem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/acabouGente" />
</android.support.constraint.ConstraintLayout>